--- a/.storybook/index.scss
+++ b/.storybook/index.scss
@@ -40,3 +40,7 @@ h1,h2,h3,h4,h5,h6 {
   font-weight: 100;
   letter-spacing: .04rem;
 }
+#story-root {
+  border: 1px solid rgb(238, 238, 238);
+  border-radius: 2px;
+}
